log
Fri 14 Apr 2023 10:18:45 PM UTC: 
 tests:  0|6
total_score: 0/70
2652da8
Fri 14 Apr 2023 11:15:44 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:10: error: unused variable ‘map’ [-Werror=unused-variable]
   55 | HashMap* map = (HashMap*) malloc(sizeof(HashMap));
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
62a49e0
Fri 14 Apr 2023 11:18:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:56: error: expected ‘)’ before ‘;’ token
   59 |   map->buckets = (Pair**) calloc(capacity*sizeof(Pair*);
      |                                 ~                      ^
      |                                                        )
hashmap.c:59:27: error: too few arguments to function ‘calloc’
   59 |   map->buckets = (Pair**) calloc(capacity*sizeof(Pair*);
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
hashmap.c:61:17: error: expected ‘;’ before ‘}’ token
   61 |     return NULL;
      |                 ^
      |                 ;
   62 | }
      | ~                
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a245c2e
Fri 14 Apr 2023 11:20:24 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:62: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                                    ~                         ^
      |                                                              )
hashmap.c:60:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                ^
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c122b88
Fri 14 Apr 2023 11:20:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:62: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                                    ~                         ^
      |                                                              )
hashmap.c:60:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   60 |   map->buckets = (HashMap**) malloc(capacity*sizeof(HashMap*);
      |                ^
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
db5105f
Fri 14 Apr 2023 11:21:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:55: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (Pair**)malloc(capacity,sizeof(Pair*);
      |                                ~                      ^
      |                                                       )
hashmap.c:60:26: error: too many arguments to function ‘malloc’
   60 |   map->buckets = (Pair**)malloc(capacity,sizeof(Pair*);
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
In file included from test.c:4:
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
defccf8
Fri 14 Apr 2023 11:21:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:55: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (Pair**)calloc(capacity,sizeof(Pair*);
      |                                ~                      ^
      |                                                       )
hashmap.c:62:17: error: expected ‘;’ before ‘}’ token
   62 |     return NULL;
      |                 ^
      |                 ;
   63 | }
      | ~                
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c57e0d
Fri 14 Apr 2023 11:23:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:55: error: expected ‘)’ before ‘;’ token
   60 |   map->buckets = (Pair**)calloc(capacity,sizeof(Pair*);
      |                                ~                      ^
      |                                                       )
hashmap.c:62:16: error: expected ‘;’ before ‘}’ token
   62 |     return map;
      |                ^
      |                ;
   63 | }
      | ~               
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad28b59
Fri 14 Apr 2023 11:24:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3d83906
Fri 14 Apr 2023 11:24:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: ‘size’ undeclared (first use in this function)
   57 |   map->size = size;
      |               ^~~~
hashmap.c:57:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6d37f68
Fri 14 Apr 2023 11:25:01 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
7c654d3
Fri 14 Apr 2023 11:31:44 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
323802d
Fri 14 Apr 2023 11:32:30 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5948e3d
Fri 14 Apr 2023 11:34:20 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   49 |   map->current = map->buckets[posicion];
      |                ^
cc1: all warnings being treated as errors
Compilation failed
db2b17e
Fri 14 Apr 2023 11:35:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c8523d1
Fri 14 Apr 2023 11:38:39 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
a374946
Fri 14 Apr 2023 11:39:49 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
bdbc8a4
Fri 14 Apr 2023 11:41:23 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
309c10b
Fri 14 Apr 2023 11:44:00 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   48 |   Pair* current_pair = map->buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3a6815d
